syntax = "proto3";

package rivet.backend.pkg.game.namespace_validate;

import "resources/legacy/proto/common.proto";

message Request {
	rivet.common.Uuid game_id = 1;
	string name_id = 2;
	string display_name = 3;
}

message Response {
	repeated rivet.common.ValidationError errors = 1;
}
